css/styles.css
/* ... */
/* Testinomial block */

.testimonial_block {
  margin-bottom: 15rem;
}

@media screen and (min-width: 1024px) {
  .testimonial_block {
    margin: 1rem 15rem;
    margin-bottom: 10rem;
  }

  .testimonial_block .block__header {
    margin-bottom: 6rem;
  }
}

/* Footer block */

.footer__block {
  background-color: #232323;
  position: relative;
  padding-top: 35rem;
}
.footer__heading {
  color: white;
  font-weight: 600;
  text-transform: uppercase;
}

.footer__block .list__item {
  color: white;
  opacity: 0.4;
}

/* .footer_block .collapsible {
  margin-top: 5rem;
} */

.footer_section {
  padding: 2rem;
  border-bottom: 2px solid #393939;
}

.footer__brand {
  margin-top: 5rem;
  text-align: center;
}

.footer__brand img {
  width: 100%;
  max-width: 230px;
}

.footer__copyright {
  font-size: 2.2rem;
  color: white;
  opacity: 0.3;
}

@media screen and (max-width: 320px) {
  .footer__block {
    padding-top: 30rem;
  }
}
@media screen and (min-width: 375px) {
  .footer__block {
    padding-top: 20rem;
  }
}

@media screen and (max-width: 767px) and (min-width: 435px) {
  .footer__block {
    padding-top: 20rem;
  }
}

@media screen and (min-width: 1024px) {
  .footer__block {
    padding-top: 25rem;
  }
  .footer_sections {
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
  }
  .footer__brand {
    order: -1;
    margin-top: 1rem;
  }
  .footer_section .list {
    margin: 0;
  }

  .footer__heading {
    font-weight: 400;
    text-transform: uppercase;
    font-size: 1.6rem;
  }

  .footer__block .list__item {
    font-weight: 400;
    font-size: 1.6rem;
  }

  .footer_section {
    padding: 2rem;
    border-bottom: 0;
  }

  .footer__block .collapsible__chevron {
    display: none;
  }

  .footer_section .collapsible__content {
    max-height: 100%;
    overflow: visible;
    opacity: 1;
    transition: max-height 0.3s, opacity 0.3s;
  }
  .footer__copyright {
    font-size: 1.5rem;
  }
}

/* Features Block */

.features__block {
  margin-top: 4rem;
}

/* Callout block */

.callout_block {
  position: absolute;
  top: -12rem;
  padding: 0 8rem;
}
@media screen and (max-width: 425px) {
  .callout_block {
    padding: 0 4rem;
  }
}

@media screen and (min-width: 1024px) {
  .features__block {
    margin-top: 10rem;
  }
  .callout_block {
    top: -8rem;
    padding: 0 20rem;
  }
}

